# HMMvar1.1.0

./: AHCluster.cpp  AHCluster.h  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  traces.0
examples/: Makefile.am  Makefile.in  tp53_cDNA.fa  tp53_simu.var
scripts/: HGVS2HMMvar.pl  compensatoryIndels.cpp  compensatoryIndels_cpp
src/: .RData  .Rhistory  AHCluster.cpp  AHCluster.h  BlastSearch.cpp  BlastSearch.h  CodeonAlphabeta.h  Common.cpp  Common.h  Kmeans.cpp  Kmeans.h  Makefile  Makefile.am  Makefile.in  MultiAlign.cpp  MultiAlign.h  Option.cpp  Option.h  ScoreVar.cpp  ScoreVar.h  Sequence.cpp  Sequence.h  blastout_tmp  hmmVar.cpp  hmmVar.out  variant.cpp  variant.h
src/.deps/: BlastSearch.Po  Common.Po  MultiAlign.Po  Option.Po  ScoreVar.Po  Sequence.Po  hmmVar.Po  variant.Po
